# dmarcguard-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  publish-bootstrap.yml
src/: lib.rs
